@@ -2,6 +2,7 @@ Version 0.16.0
   Summary of changes:
   * Implementation of Franz Allegro CL Gates MP primitive (Tobias Rittweiler).
   * improve performance of CLOS eql-specializers (Anton Vodonosov).
+  * 'build-from-lisp.sh' shell script (Tobias Rittweiler).
   
 Version 0.15.0
 (07 Jun, 2009) 
